@@ -1,5 +1,4 @@
 - audit options for what's new/deprecated/removed from FC5->FC6
-- add RHEL4
 - redo documentation:
    - describe how to subclass the important things
    - update programmers-guide
